<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/sidemenu"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:background="#F4D993"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/record" />

            <TextView
                android:id="@+id/txv_record_R"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/record"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvDayy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Day"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txvNamee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Item"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txvTypee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Type" />
            <TextView
                android:id="@+id/txvCategoryy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Class"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txvPricee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Price"
                android:textAlignment="viewEnd"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/NTDD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/ntd" />

        </LinearLayout>
        <ListView
            android:id="@+id/LV"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginRight="@dimen/horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginRight="@dimen/horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/data"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/txvvDay"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginRight="@dimen/horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:hint="@string/inputitem"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginRight="@dimen/horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="299"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:entries="@array/catrgory"
                android:minHeight="48dp"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginRight="@dimen/horizontal"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rad_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/in" />

                <RadioButton
                    android:id="@+id/output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out" />
            </RadioGroup>

            <TextView
                android:id="@+id/txv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/vertical"
            android:layout_marginRight="@dimen/horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_insert"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="oninsert"
                android:text="@string/insert" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="oninsert"
                android:text="@string/update" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="ondelete"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/sidemenu"
        app:headerLayout="@layout/header"/>


</androidx.drawerlayout.widget.DrawerLayout>