<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/sidemenu"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:background="#F4D993">

        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/mid"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_pig"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/pig" />

            <TextView
                android:id="@+id/txv_pig_P"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/raising_pig"
                android:textSize="32sp" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="@dimen/horizontal"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginRight="@dimen/horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv_pagepig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/vertical"
                android:text="@string/good"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/txv_pagepig_2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp" />
            <TextView
                android:id="@+id/txv_pagepig_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howmanypigs"
                android:textSize="22sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgPig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/tree" />
        <TextView
            android:id="@+id/txv_pagepig_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/horizontal"
            android:layout_marginLeft="@dimen/vertical"
            android:layout_marginTop="20dp"
            android:text="@string/fighting"
            android:textSize="22sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/txv_pagepig_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal"
            android:layout_marginTop="@dimen/top"
            android:layout_marginRight="@dimen/horizontal"
            android:text="@string/rule"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/sidemenu"
        app:headerLayout="@layout/header"/>


</androidx.drawerlayout.widget.DrawerLayout>